MudDialog: Fix not aligned Toolbar buttons on Dialog header (#5497) (#5725)

--- a/src/MudBlazor/Styles/components/_dialog.scss
+++ b/src/MudBlazor/Styles/components/_dialog.scss
@@ -87,7 +87,7 @@
         + * > .mud-dialog-content {
             border-radius: 0
         }
-        & .mud-button-root {
+        & .mud-button-close {
             top: 8px;
             right: 8px;
             position: absolute;
